# lve

./: .gitattributes  .gitignore  .lverepo  README.md  add_instance.py  competition.js  create_test.py  index.html  instances.js  nav.js  promptdown.css.m  requirements.txt  setup.cfg  style.css
.github/workflows/: lve-ci.yml  lve-deploy.yml  lve-web.yml
core/: readme_generator.py  test.py  utils.py
core/checkers/: __init__.py  base.py  match.py  pii.py
docs/: contribution.html  index.html  index.md  resources.html  resources.md
docs/blog/: community-challenges-no-1.md  first-challenges.md  how-effective-are-llm-safety-filters.md  launching-the-lve-project.md  llm-safety-filters.md  releasing-lve.md  update.md
docs/contributing/: contribution.html  guidelines.html  guidelines.md  resources.html  resources.md
docs/general/: about.md  faq.md
docs/prompt/: format.html  format.md
docs/technical/: checker.html  checker.md  core_checkers.html  prompt.html  prompt.md
dummy/: index.html
dummy/a_plus_b/: openai--gpt-35-turbo.html
dummy/a_plus_b_includes/: meta--llama-2-7b-chat.html  mistralai--mistral-7b-instruct-v0.1.html
dummy/a_plus_b_json_single/: openai--gpt-35-turbo.html
hooks/: pre-commit
lve-tools/: README.md  setup.cfg
privacy/: index.html
reliability/: index.html
responsibility/: index.html
scripts/: add_instance.py  create_test.py  run_instance.py  setup.sh
security/: index.html
trust/: index.html
web/: .gitignore  category.html  copy.js  docs.html  index.html  lve.html  make.py  readme_parser.py  style.css  toolbar.html
(+403 files in other folders)
