[metadata]
name = lve-tools
version = 0.1
author = LVE Team
description = Tools for documenting and recording language model vulnerabilities and exposures.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = lve-tools
include_package_data = True
python_requires = >=3.10

# When updating this list, regenerate poetry.lock by running ''poetry lock --no-update'' in scripts/flake.d
install_requires =
    openai
    pydantic
    questionary
    termcolor
    GitPython

[options.packages.find]
where = lve-tools

[options.entry_points]
console_scripts =
    lve = lve.cli.cli:main
